terraform/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-rabbitmq
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-rabbitmq
  template:
    metadata:
      labels:
        app: retail-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: retail-rabbitmq
  namespace: retail-app
spec:
  type: ClusterIP
  selector:
    app: retail-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
