terraform/ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ui
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
